# research-curator

./: .env.dev.example  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  install.sh  main.py  plan.md  pyproject.toml  report.md  requirements.txt  test_auth.py  test_checkpoint1.py  test_checkpoint2.py  test_checkpoint3.py  test_checkpoint4.py  test_users.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: pull_request_template.md
.github/workflows/: pull-request.yaml  python.yaml
.streamlit/: config.toml  secrets.toml
alembic/: env.py
alembic/versions/: 69f38edcb7ac_add_user_preferences_articles_digests_.py
configs/: configs.py  data.yaml  feature.yaml  model.yaml  prompts.yaml  train.yaml
demo/: main.py  page_utils.py  style.css
demo/.streamlit/: config.toml
demo/app1/: app1-1.py  app1-2.py
demo/app2/: app2-1.py  app2-2.py
demo/home/: home.py
docs/: LLM_INTEGRATION.md  PROCESSORS.md  PROMPTS.md
docs/reports/: README.md  day4_checkpoint4.md  day4_checkpoint5.md  day5_checkpoint1.md  day5_checkpoint2.md  day5_checkpoint3.md  day5_checkpoint4.md  day5_summary.md  day6_summary.md  day8_checkpoint1.md  day8_checkpoint2.md  day8_checkpoint3.md  day8_checkpoint4.md  day9-2_checkpoint1.md  day9-2_checkpoint2.md  day9-2_checkpoint3.md  day9-2_checkpoint4.md  day9-2_checkpoint5.md  day9_checkpoint3.md  day9_checkpoint4.md  day9_checkpoint5.md
examples/: llm_usage_example.py
notebooks/: 01.test_llm_client.ipynb  01.test_security.ipynb  02.test_day3_collectors.ipynb  02.test_llm_api.ipynb  03.test_day4.ipynb  04.test_day5.ipynb  04.test_day5_checkpoint1.ipynb  06.test_day6.ipynb  07.test_day7.ipynb  07.test_day7_checkpoint1.ipynb  07.test_day7_checkpoint2.ipynb  07.test_day7_checkpoint3.ipynb  07.test_day7_checkpoint4.ipynb  08.test_day8_checkpoint1.ipynb  08.test_day8_checkpoint2.ipynb  08.test_day8_checkpoint4.ipynb  template.ipynb  test_llm_client.ipynb  test_prompts.ipynb
src/app/: __init__.py
src/app/api/: __init__.py  dependencies.py  main.py
src/app/api/routers/: articles.py  auth.py  collectors.py  feedback.py  llm.py  processors.py  scheduler.py  users.py
src/app/api/schemas/: __init__.py  articles.py  auth.py  collectors.py  common.py  feedback.py  llm.py  processors.py  scheduler.py  users.py
src/app/collectors/: __init__.py  arxiv.py  base.py  news.py  search_client.py
src/app/core/: config.py  prompts.py  retry.py  security.py
src/app/db/: __init__.py  crud.py  models.py  session.py
src/app/db/crud/: users.py  (+5 more)
src/app/email/: __init__.py  builder.py  digest.py  history.py  selection.py  sender.py
src/app/frontend/: README.md  main.py
src/app/llm/: __init__.py  client.py
src/app/processors/: __init__.py  classifier.py  embedder.py  evaluator.py  pipeline.py  summarizer.py
src/app/scheduler/: __init__.py  main.py  tasks.py
src/app/utils/: config_loader.py  path.py  settings.py
src/app/vector_db/: __init__.py  client.py  operations.py  schema.py
src/my_ml/utils/: config_loader.py
tests/: test_api_processors.py  test_day5_vector_db.py  test_email_builder.py  test_email_digest.py  test_email_sender.py  test_llm_api.py  test_llm_client.py  test_pipeline.py  test_processors.py  test_security.py
(+12 files in other folders)
