[project]
name = "research-curator"
version = "1.0.0"
description = "AI reasearch curator"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "KMYU", email = "sguys99@gmail.com" } # Optional
]
maintainers = [
    { name = "KMYU", email = "sguys99@gmail.com" } # Optional
]

dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.2",
    "arxiv>=2.3.1",
    "asyncpg>=0.31.0",
    "boto3>=1.41.2",
    "fastapi>=0.121.3",
    "google-adk>=1.18.0",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.3",
    "litellm>=1.80.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "uuid>=1.30",
    "uuid7>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 105
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff >= 0.8.0",
    "pre-commit >= 3.3.3",
]
